deploy: 9c8ae93ac4c9dd0e2ae7eb788ef4fb831e0a1ff2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
-<span id="back-to-index"><a href="index.html">Back to index</a></span><ul class="sectlevel0">
+<ul class="sectlevel0">
 <li><a href="#overview">Overview</a>
 <ul class="sectlevel1">
 <li><a href="#overview-http-verbs">1. HTTP verbs</a></li>
@@ -1019,7 +1019,7 @@ Content-Length: 94
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-03-01 20:51:10 UTC
+Last updated 2022-03-01 21:10:24 UTC
 </div>
 </div>
 </div>
